# Algo_assemblage

./: .gitignore  CMakeLists.txt  CMakeLists.txt.bak  README.md  donneesEntrees.c  donneesEntrees.h  exempleclpk.txt  main.c  scenarioTest.txt  sprog.c  sprog.h
Donnees/: TempsAttendus.txt  exclusions.txt  operations.txt  operations1.txt  precedences.txt
lib/linux/glpk-4.65/: Makefile  config.status  libtool
lib/linux/glpk-4.65/examples/: Makefile  glpsol
lib/linux/glpk-4.65/examples/.deps/: glpsol.Po
lib/linux/glpk-4.65/examples/.libs/: glpsol
lib/linux/glpk-4.65/src/: Makefile
lib/linux/glpk-4.65/src/.deps/: libglpk_la-adler32.Plo  libglpk_la-advbas.Plo  libglpk_la-alloc.Plo  libglpk_la-amd_1.Plo  libglpk_la-amd_2.Plo  libglpk_la-amd_aat.Plo  libglpk_la-amd_control.Plo  libglpk_la-amd_defaults.Plo  libglpk_la-amd_dump.Plo  libglpk_la-amd_info.Plo  libglpk_la-amd_order.Plo  libglpk_la-amd_post_tree.Plo  libglpk_la-amd_postorder.Plo  libglpk_la-amd_preprocess.Plo  libglpk_la-amd_valid.Plo  libglpk_la-asnhall.Plo  libglpk_la-asnlp.Plo  libglpk_la-asnokalg.Plo  libglpk_la-avl.Plo  libglpk_la-bfd.Plo  libglpk_la-bfx.Plo  libglpk_la-bignum.Plo  libglpk_la-btf.Plo  libglpk_la-btfint.Plo  libglpk_la-cfg.Plo  libglpk_la-cfg1.Plo  libglpk_la-cfg2.Plo  libglpk_la-ckasn.Plo  libglpk_la-ckcnf.Plo  libglpk_la-clqcut.Plo  libglpk_la-colamd.Plo  libglpk_la-covgen.Plo  libglpk_la-cplex.Plo  libglpk_la-cpp.Plo  libglpk_la-cpxbas.Plo  libglpk_la-crc32.Plo  libglpk_la-deflate.Plo  libglpk_la-dimacs.Plo  (+146 more)
src/: conditionsGlpk.c  lectureDonnees.c  main.c  sprog.c  sprog.h
(+1 files in other folders)
